# nimbus

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  build.rs
src/: args.rs  config.rs  lib.rs  main.rs
src/config/: args.rs  mod.rs
tests/: common.rs  darksky_tests.rs
tests/common/: mod.rs
tests/data/: forecast.json  forecast_2.json  forecast_3.json  forecast_4.json
weather_icons/: Cargo.toml  icon_reference.txt
weather_icons/doc/: darksky.txt  day.txt  direction.txt  miscellaneous.txt  moon.txt  moon_alt.txt  moon_numbered.txt  neutral.txt  night.txt  night_alt.txt  owm.txt  time.txt  wind.txt  wmo.txt  wu.txt  yahoo.txt
weather_icons/src/: lib.rs  moon.rs
weather_icons/tests/: test_moon.rs
