[package]
name = "nimbus"
version = "0.1.0"
description = "Cli tool to get the weather forecast"
documentation = "https://docs.rs/nimbus"
license = "MIT"
authors = ["Matthew Klein <mklein994@gmail.com>"]
build = "build.rs"

[dependencies]
chrono = "0.4.0"
clap = { version = "2.27.1", features = ["wrap_help"] }
dotenv = "0"
log = "0.3"
pretty_env_logger = "0.1"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
xdg = "2.1.0"
weather_icons = "0.1"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.darksky]
branch = "master"
features = ["reqwest"]
git = "https://github.com/zeyla/darksky.rs"

[build-dependencies]
clap = "2.27.1"

[features]
default = []

[workspace]
