[package]
name = "nimbus"
version = "0.1.0"
description = "Cli tool to get the weather forecast"
documentation = "https://docs.rs/nimbus"
license = "MIT"
authors = ["Matthew Klein <mklein994@gmail.com>"]
build = "build.rs"

[dependencies]
chrono = "0.4.0"
clap = { version = "2.27.1", features = ["wrap_help"] }
clippy = { version = "*", optional = true }
darksky = { version = "0.7.0", default-features = false, features = ["reqwest"] }
dotenv = "0"
log = "0.3"
mockito = "0.9.0"
pretty_env_logger = "0.1"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
weather_icons = "0.1"
xdg = "2.1.0"

[build-dependencies]
clap = "2.27.1"

[features]
default = []

[workspace]
